force-app/main/default/objects/Movie__c/fields/My_Rating__c.field-meta.xml
<CustomField>
    <fullName>My_Rating__c</fullName>
    <label>My Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>