force-app/main/default/objects/Movie__c/fields/My_Review__c.field-meta.xml
<CustomField>
    <fullName>My_Review__c</fullName>
    <label>My Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>