force-app/main/default/objects/Movie__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Want to Watch</fullName>
                <default>true</default>
                <label>Want to Watch</label>
            </value>
            <value>
                <fullName>Watching</fullName>
            </value>
            <value>
                <fullName>Watched</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>