force-app/main/default/objects/Movie__c/fields/TMDB_ID__c.field-meta.xml
<CustomField>
    <fullName>TMDB_ID__c</fullName>
    <externalId>true</externalId>
    <label>TMDB ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>