force-app/main/default/objects/Movie__c/fields/TMDB_Rating__c.field-meta.xml
<CustomField>
    <fullName>TMDB_Rating__c</fullName>
    <label>TMDB Rating</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>