force-app/main/default/objects/Movie__c/fields/Watch_Date__c.field-meta.xml
<CustomField>
    <fullName>Watch_Date__c</fullName>
    <label>Watch Date</label>
    <type>Date</type>
</CustomField>